--- a/docs/source/tutorials/tutorial.ipynb
+++ b/docs/source/tutorials/tutorial.ipynb
@@ -20,21 +20,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading Molecules"
+    "### OpenBabel or RDKit"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OpenBabel and RDKit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`spyrmsd` natively supports [OpenBabel](http://openbabel.org/wiki/Main_Page) and [RDKit](http://rdkit.org/) to load molecules. However, the API for RMSD calculations is extremely minimal and only needs the following information:\n",
+    "`spyrmsd` natively supports [OpenBabel](http://openbabel.org/wiki/Main_Page) and [RDKit](http://rdkit.org/) to load molecules in order to work as a standalone tool. However, the API for RMSD calculations is extremely minimal and only needs the following information:\n",
     "\n",
     "* Atomic coordinates\n",
     "* Atomic numbers\n",
@@ -47,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I/O"
+    "### Loading Molecules"
    ]
   },
   {
@@ -175,10 +168,10 @@
     "RMSD = rmsd.symmrmsd(\n",
     "    coords_ref, \n",
     "    coords,\n",
-    "    adj_ref,\n",
-    "    adj,\n",
     "    anum_ref,\n",
     "    anum,\n",
+    "    adj_ref,\n",
+    "    adj,\n",
     ")\n",
     "    \n",
     "print(RMSD)"
@@ -215,10 +208,10 @@
     "RMSD = rmsd.symmrmsd(\n",
     "    coords_ref, \n",
     "    coords,\n",
-    "    adj_ref,\n",
-    "    adj,\n",
     "    anum_ref,\n",
     "    anum,\n",
+    "    adj_ref,\n",
+    "    adj,\n",
     "    minimize=True,\n",
     ")\n",
     "    \n",
