--- a/docs/source/tutorials/tutorial.ipynb
+++ b/docs/source/tutorials/tutorial.ipynb
@@ -56,14 +56,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref = io.to_molecule(io.load(\"molecules/1a4k_ligand.sdf\"))"
+    "ref = io.loadmol(\"molecules/1a4k_ligand.sdf\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`io.load` load a single molecule from a file. In order to load all molecules we need to use `io.loadall`:"
+    "`io.loadmol` load a single molecule from a file. In order to load all molecules we need to use `io.loadallmols`:"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mols = [io.to_molecule(mol) for mol in io.loadall(\"molecules/1a4k_dock.sdf\")]"
+    "mols = io.loadallmols(\"molecules/1a4k_dock.sdf\")"
    ]
   },
   {
